Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -332,16 +332,353 @@
   ENDMETHOD.
 ```
 </br>
+</br>
 
 **2) Main.controller.js**
+```java
+// assignment1
 
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+     "sap/ui/model/json/JSONModel",
+     "sap/ui/core/Fragment"
+], (Controller, Filter, FilterOperator, JSONModel, Fragment) => {
+    "use strict";
+
+    return Controller.extend("assignment1.controller.Main", {
+        onInit() {
+            this.oInputModel = new JSONModel();     
+            this.getView().setModel(this.oInputModel, "oInputModel");   
+            this.oDataModel = this.getOwnerComponent().getModel();  
+        },
+        onSearch: function() {
+            let oInput = this.oInputModel.getData();    // 입력값 (필터)
+            let oFilter = [];
+            let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+                pattern: "yyyyMMdd",
+                UTC: true
+            });
+            let oStartDate = oDateFormat.parse(oInput.Assigndate);
+            let oEndDate = oDateFormat.parse("20260701");
+            oFilter.push(new Filter("Assigndate", FilterOperator.BT, oStartDate, oEndDate));
+            oFilter.push(new Filter("Memo", FilterOperator.EQ, oInput.Memo));
+
+            this.byId("idEmployeeTable").getBinding("items").filter(oFilter);
+        },
+        onSelectionChange: function(oEvent) {
+            // let oData = oEvent.getParameters().listItem.getBindingContext().getObject();    // 선택한 열의 데이터 가져오기
+            // let oModel = new JSONModel(oData);      // 선택한 열의 데이터로 모델 생성 -> 다이얼로그에서 쓰기 위함
+            // let oDialog = sap.ui.getCore().byId("idUpdateDialog");    
+
+            // if(oDialog) {      
+            //     oDialog.setModel(oModel, "oUpdateModel");
+            //     oDialog.open();
+            // }
+            // else {
+            //     Fragment.load({
+            //         name: "assignment1.view.fragment.UpdateDialog",        
+            //         type: "XML",        
+            //         controller: this    
+            //     }).then(function(oDialog) {
+            //         oDialog.setModel(oModel, "oUpdateModel");
+            //         oDialog.open();
+            //     }.bind(this))
+            // }
+        },
+        onCreate: function() {
+            let oModel = new JSONModel();     
+            let oDialog = sap.ui.getCore().byId("idCreateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.CreateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oCreateModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onCreateButton: function() {
+            let oData = sap.ui.getCore().byId("idCreateDialog").getModel("oCreateModel").getData();
+            oData.Assigndate.setMinutes(
+                oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+            );
+            let oBody = {
+                Empno   : oData.Empno,
+                Projod  : oData.Projod,
+                Assigndate  : oData.Assigndate,
+                Role    : oData.Role,
+                Memo    : oData.Memo
+            }
+            this.oDataModel.create("/EmployeeSet", oBody, {
+                success: function() {
+                    sap.m.MessageToast.show("생성 성공!");
+                },
+                error: function() {
+                    sap.m.MessageToast.show("생성 에러!");
+                }
+            })
+        },
+        onClose2: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        },
+        onUpdate: function() {
+            let oData = this.byId("idEmployeeTable").getSelectedItem().getBindingContext().getObject();    // 선택한 열의 데이터 가져오기
+            let oModel = new JSONModel(oData);      // 선택한 열의 데이터로 모델 생성 -> 다이얼로그에서 쓰기 위함
+            let oDialog = sap.ui.getCore().byId("idUpdateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "assignment1.view.fragment.UpdateDialog",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "oUpdateModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onUpdateButton: function() {
+            let oModel = sap.ui.getCore().byId("idUpdateDialog").getModel("oUpdateModel");    // 다이얼로그에서 수정한 데이터 값
+            let oData = oModel.getData();
+
+            oData.Assigndate.setMinutes(
+                oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+            );
+
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno : oData.Empno,
+                Projod : oData.Projod
+            })
+            this.oDataModel.update(sPath, oData, {
+                success: function() {
+                    sap.m.MessageToast.show("수정 성공!");
+                    this.oDataModel.refresh();
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("수정 에러!");
+                }
+            })
+        },
+        onClose: function(oEvent) {
+            oEvent.getSource().getParent().close();
+        },
+        onDelete: function() {
+            let oData = this.byId("idEmployeeTable").getSelectedItem().getBindingContext().getObject(); 
+            let sPath = this.oDataModel.createKey("/EmployeeSet", {
+                Empno: oData.Empno,
+                Projod : oData.Projod
+            });
+            this.oDataModel.remove(sPath);
+            sap.m.MessageToast.show("삭제 성공!");
+        }
+    });
+});
+```
+</br>
 </br>
 
 **3) Main.view.xml**
+```html
+// assignment1
+
+<mvc:View controllerName="assignment1.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:f="sap.f"
+    xmlns:layout="sap.ui.layout"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns="sap.m">
+    <f:DynamicPage id="dynamicPageId" headerExpanded="true" toggleHeaderOnTitleClick="false">
+        <!-- DynamicPage Title -->
+        <f:title>
+            <f:DynamicPageTitle>
+                <f:heading>
+                    <Title text="Header Title"/>
+                </f:heading>
+                <!-- <f:content>
+                    <OverflowToolbar>
+                    </OverflowToolbar>
+                </f:content> -->
+            </f:DynamicPageTitle>
+        </f:title>
+        <!-- DynamicPage Header -->
+        <f:header>
+            <f:DynamicPageHeader pinnable="false">
+                <fb:FilterBar id="filterbar" search="onSearch" persistencyKey="myPersKey" useToolbar="false" showGoOnFB="true" showFilterConfiguration="false">
+                    <fb:filterGroupItems>
+                        <fb:FilterGroupItem name="Assigndate" groupName="Group1" label="Assign Date" visibleInFilterBar="true">
+                            <fb:control>
+                                <DatePicker value="{oInputModel>/Assigndate}" />
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <fb:FilterGroupItem name="Memo" groupName="Group1" label="Memo" visibleInFilterBar="true">
+                            <fb:control>
+                                <Input value="{oInputModel>/Memo}"/>
+                            </fb:control>
+                        </fb:FilterGroupItem>
+                        <!-- <fb:FilterGroupItem name="Search" groupName="Group1" visibleInFilterBar="true">
+                            <fb:control>
+                                <Button text="검색버튼" press="onPress" />
+                            </fb:control>
+                        </fb:FilterGroupItem> -->
+                    </fb:filterGroupItems>
+                </fb:FilterBar>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <Table id="idEmployeeTable"
+                    sticky="HeaderToolbar,ColumnHeaders"
+                    inset="false"
+                    items="{/EmployeeSet}"
+                    selectionChange="onSelectionChange"
+                    class="sapFDynamicPageAlignContent"
+                    mode="SingleSelectLeft"
+                    width="auto">
+                <headerToolbar>
+                    <Toolbar>
+                        <Title text="Products" level="H2"/>
+                        <Button text="생성" press="onCreate"/>
+                        <Button text="수정" press="onUpdate"/>
+                        <Button text="삭제" press="onDelete"/>
+                    </Toolbar>
+                </headerToolbar>
+                <columns>
+                    <Column width="12em">
+                        <Text text="Empno" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Projod" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Assigndate" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Role" />
+                    </Column>
+                    <Column width="12em">
+                        <Text text="Memo" />
+                    </Column>
+                </columns>
+                <items>
+                    <ColumnListItem>
+                        <cells>
+                            <Text text="{Empno}" />
+                            <Text text="{Projod}" />
+                            <Text text="{
+                                path: 'Assigndate',
+                                type: 'sap.ui.model.type.DateTime',
+                                formatOptions: { pattern : 'yyyy-MM-dd' }
+                            }" />
+                            <Text text="{Role}" />
+                            <Text text="{Memo}" />
+                        </cells>
+                    </ColumnListItem>
+                </items>
+            </Table>
+        </f:content>
+    </f:DynamicPage>
+</mvc:View>
+```
+</br>
 </br>
 
 **4) CreateDialog.fragment.xml**
+```html
+// assignment1
 
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idCreateDialog"
+            title="Create Dialog"
+            contentHeight="50%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Empno"/>
+                    <Input value="{oCreateModel>/Empno}" />
+                    <Label text="Projod"/>
+                    <Input value="{oCreateModel>/Projod}" />
+                    <Label text="Assign date"/>
+                    <DatePicker
+                        dateValue="{oCreateModel>/Assigndate}"
+                        displayFormat="yyyy-MM-dd"
+                    />
+                    <Label text="Role"/>
+                    <Input value="{oCreateModel>/Role}" />
+                    <Label text="Memo"/>
+                    <Input value="{oCreateModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="생성" press=".onCreateButton" />
+            <Button text="닫기" press=".onClose2" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
 </br>
 
 **5) UpdateDialog.fragment.xml**
+```html
+// assignment1
+
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idUpdateDialog"
+            title="Update Dialog"
+            contentHeight="50%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Empno"/>
+                    <Input value="{oUpdateModel>/Empno}" />
+                    <Label text="Projod"/>
+                    <Input value="{oUpdateModel>/Projod}" />
+                    <Label text="Assign date"/>
+                    <DatePicker
+                        dateValue="{oUpdateModel>/Assigndate}"
+                        displayFormat="yyyy-MM-dd"
+                    />
+                    <Label text="Role"/>
+                    <Input value="{oUpdateModel>/Role}" />
+                    <Label text="Memo"/>
+                    <Input value="{oUpdateModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="수정" press=".onUpdateButton" />
+            <Button text="닫기" press=".onClose" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
+</br>
+
