Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -160,7 +160,7 @@
 
 ### 실습 1 : SAP OData 서비스를 이용해 Employee 데이터를 조회·생성·수정·삭제(CRUD)
 - CRUD 구현 실습
-- FilterBar로 조건 조회하고, 테이블에서 선택한 데이터를 Create/Update 다이얼로그로 처리하며 OData CRUD 전 과정을 연습하는 실습용 애플리케이션
+- FilterBar로 조건 조회, 테이블에서 선택한 데이터를 Create/Update 다이얼로그로 처리, OData CRUD 실습
 </br>
 </br>
 
