Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -155,6 +155,23 @@
 
 </br>
 
+## < Header–Item 구조 OData 서비스 구현 >
+</br>
+
+**1) DDIC 구조 기반 Header / Item Entity 생성**
+- ABAP DDIC 구조(Header, Item)를 Import하여 OData Entity Type과 EntitySet을 생성
+  
+<img width="676" height="361" alt="image" src="https://github.com/user-attachments/assets/6e0c39cb-4d8b-4d1b-8091-fc447b0ec3fe" />
+
+<img width="707" height="378" alt="image" src="https://github.com/user-attachments/assets/bcf49cb6-e29a-414b-96df-efbf7d11a0d5" />
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 </br>
 
