Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -163,7 +163,18 @@
   
 <img width="676" height="361" alt="image" src="https://github.com/user-attachments/assets/6e0c39cb-4d8b-4d1b-8091-fc447b0ec3fe" />
 
-<img width="707" height="378" alt="image" src="https://github.com/user-attachments/assets/bcf49cb6-e29a-414b-96df-efbf7d11a0d5" />
+<img width="683" height="365" alt="image" src="https://github.com/user-attachments/assets/d61fe763-f994-494c-ae52-ce3cd4c6e1b5" />
+</br>
+</br>
+</br>
+</br>
+
+**2) Header–Item Association 생성 (1:N 관계 설정)**
+- Header와 Item Entity를 Carrid 키로 연결하여 1:N 관계의 Association 및 Navigation Property를 생성
+
+<img width="323" height="249" alt="image" src="https://github.com/user-attachments/assets/11a4a940-063d-4caf-86c3-1f4fb444fdb5" />
+
+<img width="252" height="251" alt="image" src="https://github.com/user-attachments/assets/79aa0ff0-dab8-41cc-94eb-ec0aa9cf84c2" />
 
 </br>
 </br>
