Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -176,6 +176,14 @@
 
 <img width="252" height="251" alt="image" src="https://github.com/user-attachments/assets/79aa0ff0-dab8-41cc-94eb-ec0aa9cf84c2" />
 
+<img width="760" height="239" alt="image" src="https://github.com/user-attachments/assets/6ef6fafb-2dde-46da-8886-de483c25efb6" />
+
+<img width="694" height="96" alt="image" src="https://github.com/user-attachments/assets/0614ec84-189e-4575-92c7-e25ce10060f9" />
+
+<img width="711" height="135" alt="image" src="https://github.com/user-attachments/assets/4db70a20-18a5-4a78-bccd-8c4b1fbe1578" />
+
+<img width="720" height="75" alt="image" src="https://github.com/user-attachments/assets/b07d1492-8d61-4cb7-a67b-b985b5b081cb" />
+
 </br>
 </br>
 
