Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -183,7 +183,31 @@
 <img width="711" height="135" alt="image" src="https://github.com/user-attachments/assets/4db70a20-18a5-4a78-bccd-8c4b1fbe1578" />
 
 <img width="720" height="75" alt="image" src="https://github.com/user-attachments/assets/b07d1492-8d61-4cb7-a67b-b985b5b081cb" />
+</br>
+</br>
+</br>
+</br>
 
+**3) Header–Item OData 서비스 클래스 생성 및 서비스 활성화**
+- Header–Item 모델을 기반으로 MPC/DPC 클래스를 생성하고, OData 서비스를 등록·활성화하여 외부에서 호출 가능하도록 설정
+
+<img width="516" height="406" alt="image" src="https://github.com/user-attachments/assets/907562da-2d0f-4ffe-afff-0d1ee717a557" />
+
+<img width="853" height="426" alt="image" src="https://github.com/user-attachments/assets/2e217943-5f49-4b69-afd2-c9444bd0cb91" />
+</br>
+</br>
+</br>
+</br>
+
+**4) $expand를 이용한 Header–Item 연계 조회 테스트**
+- SAP Gateway Client에서 HeaderSet 조회 시 `$expand=ItemSet` 을 사용해 Header와 하위 Item 데이터를 한 번에 조회
+```html
+/HeaderSet?$format=json&$expand=ItemSet
+```
+<img width="804" height="461" alt="image" src="https://github.com/user-attachments/assets/d7a6770b-ede9-43d1-be5c-3aceacca7f16" />
+</br>
+</br>
+</br>
 </br>
 </br>
 
