Update 1-7. 프로그래밍 코드 최적화(02.09).md

--- a/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
+++ b/RAP/1-7. 프로그래밍 코드 최적화(02.09).md
@@ -1,5 +1,7 @@
 ## <  핵심 개념 >
 - **1) 조회(GET)는 HTTP 가능, 데이터 변경(Create/Update/Delete)은 HTTPS 필수**
+- **2) sap.ui.model.odata.v2.ODataModel CRUD 메서드**
+- **3) Header–Item 구조 OData 서비스 구현**
 
 </br>
 </br>
