Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -7,6 +7,42 @@
 
 </br>
 
-## <  >
+## < Header–Item 구조 OData 서비스 구현 >
 </br>
 
+### 1) SAP GUI 구현
+</br>
+
+**1) HEADERSET_GET_ENTITYSET**
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : HEADERSET_GET_ENTITYSET
+
+  method HEADERSET_GET_ENTITYSET.
+    SELECT * FROM zscarrcl2_b03
+      INTO TABLE et_entityset.
+  endmethod.
+```
+</br>
+
+**2) ITEMSET_GET_ENTITYSET**
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : ITEMSET_GET_ENTITYSET
+
+  method ITEMSET_GET_ENTITYSET.
+    DATA lv_carrid TYPE s_carr_id.
+    DATA lt_data TYPE TABLE OF zspflicl2_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      IF ls_key-name EQ 'Carrid'.
+        MOVE ls_key-value TO lv_carrid.
+      ENDIF.
+    ENDLOOP.
+
+    SELECT * FROM ZSPFLICL2_B03
+      INTO TABLE lt_data
+      WHERE carrid = lv_carrid.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING lt_data TO et_entityset.
+    ENDIF.
+  endmethod.
+```
