Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -10,7 +10,7 @@
 ## < Header–Item 구조 OData 서비스 구현 >
 </br>
 
-### 1) SAP GUI 구현
+### 1) Read (GET)
 </br>
 
 **1) HEADERSET_GET_ENTITYSET**
@@ -56,6 +56,9 @@
 - `lv_nav = 'ITEMSET'` → `$expand` 로 처리한 Navigation Property(ItemSet) 이름을 Gateway에 알려주는 값
 - `et_expanded_tech_clauses` → `$expand` 요청 중 실제로 처리한 Navigation Property들을 Gateway에 전달하는 파라미터
 - `er_entity` → 조회·가공된 단일 Entity 결과를 OData 응답으로 내려보내는 출력 파라미터
+
+<img width="592" height="581" alt="image" src="https://github.com/user-attachments/assets/41d11e2d-235e-4d55-832a-e83e14af1c8c" />
+
 ```abap
 " ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITY
 
@@ -148,3 +151,6 @@
     ENDIF.
   endmethod.
 ```
+</br>
+
+**5) Get Gateway로 확인 가능**
