--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -154,3 +154,5 @@
 </br>
 
 **5) Get Gateway로 확인 가능**
+
+<img width="644" height="167" alt="image" src="https://github.com/user-attachments/assets/4f537639-2bc0-48de-8220-705ab26ad9b2" />
