Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -154,5 +154,7 @@
 </br>
 
 **5) Get Gateway로 확인 가능**
-
+```html
+/HeaderSet?$format=json&$expand=ItemSet
+```
 <img width="644" height="167" alt="image" src="https://github.com/user-attachments/assets/4f537639-2bc0-48de-8220-705ab26ad9b2" />
