Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -158,3 +158,10 @@
 /HeaderSet?$format=json&$expand=ItemSet
 ```
 <img width="644" height="167" alt="image" src="https://github.com/user-attachments/assets/4f537639-2bc0-48de-8220-705ab26ad9b2" />
+</br>
+</br>
+</br>
+</br>
+
+### 1) Read (GET)
+</br>
