Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -163,5 +163,7 @@
 </br>
 </br>
 
-### 1) Read (GET)
+### 2) Create (POST)
 </br>
+
+<img width="940" height="682" alt="image" src="https://github.com/user-attachments/assets/3ac5c726-7f61-48a0-acf2-67f377e82d8b" />
