--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -59,7 +59,7 @@
 - `et_expanded_tech_clauses` → `$expand` 요청 중 실제로 처리한 Navigation Property들을 Gateway에 전달하는 파라미터
 - `er_entity` → 조회·가공된 단일 Entity 결과를 OData 응답으로 내려보내는 출력 파라미터
 
-<img width="461" height="453" alt="image" src="https://github.com/user-attachments/assets/d980cfbb-84ad-463f-9a99-e5a76ae92dd7" />
+<img width="518" height="323" alt="image" src="https://github.com/user-attachments/assets/21524dd0-fb91-4aac-b01a-26cedd4070d5" />
 
 ```abap
 " ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITY
@@ -169,5 +169,46 @@
 
 ### 2) Create (POST)
 </br>
+- `io_data_provider->read_entry_data` → 요청 payload(body)에 담긴 입력 데이터를 ABAP 구조로 읽어오는 메서드
+- `er_deep_entity` → Deep Create 수행 후 생성된 Header–Item 구조를 OData 응답으로 반환하는 출력 파라미터
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~CREATE_DEEP_ENTITY
+
+  method /IWBEP/IF_MGW_APPL_SRV_RUNTIME~CREATE_DEEP_ENTITY.
+    TYPES BEGIN OF ts_headeritem.
+      INCLUDE TYPE ZCL_ZGWHEADITEM_B03_MPC=>ts_header.
+      TYPES ItemSet TYPE TABLE OF ZCL_ZGWHEADITEM_B03_MPC=>ts_item WITH DEFAULT KEY.
+    TYPES END OF ts_headeritem.
+
+    DATA: ls_create_data TYPE ts_headeritem,
+          ls_header TYPE ZCL_ZGWHEADITEM_B03_mpc=>ts_header,
+          lt_item TYPE ZCL_ZGWHEADITEM_B03_mpc=>tt_item.
+    CASE iv_entity_name.
+      WHEN 'Header'.
+        io_data_provider->read_entry_data(
+          IMPORTING es_data = ls_create_data
+        ).
+
+        " 받아온 Header-Item 데이터 분리
+        MOVE-CORRESPONDING ls_create_data TO ls_header.
+        MOVE-CORRESPONDING ls_create_data-itemset TO lt_item.
+
+        " 각 DB Table에 Create
+        INSERT zscarrcl2_b03 FROM ls_header.
+        IF sy-subrc = 0.
+          INSERT zspflicl2_b03 FROM TABLE lt_item.
+          IF sy-subrc <> 0.
+            ROLLBACK WORK.  " item insert 실패 시 전체 롤백
+          ENDIF.
+        ENDIF.
+
+        " 결과 출력 (ER_DEEP_ENTITY)
+        copy_data_to_ref(
+          EXPORTING is_data = ls_create_data
+          CHANGING cr_data = er_deep_entity
+        ).
+    ENDCASE.
+  endmethod.
+```
 
 <img width="940" height="682" alt="image" src="https://github.com/user-attachments/assets/3ac5c726-7f61-48a0-acf2-67f377e82d8b" />
