Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -168,7 +168,9 @@
 </br>
 
 ### 2) Create (POST)
+- Header 1건과 그에 속한 Item 여러 건을 한 번에 받아 각각의 DB 테이블에 생성한 뒤, 생성 결과를 응답으로 반환하는 메서드
 </br>
+
 - `io_data_provider->read_entry_data` → 요청 payload(body)에 담긴 입력 데이터를 ABAP 구조로 읽어오는 메서드
 - `er_deep_entity` → Deep Create 수행 후 생성된 Header–Item 구조를 OData 응답으로 반환하는 출력 파라미터
 ```abap
