Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -214,3 +214,84 @@
 ```
 
 <img width="940" height="682" alt="image" src="https://github.com/user-attachments/assets/3ac5c726-7f61-48a0-acf2-67f377e82d8b" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < DatePicker 정리 >
+```html
+<!-- 1) type.Date + formatOptions -->
+<DatePicker
+  value="{
+    path: 'oInputModel>/Assigndate',
+    type: 'sap.ui.model.type.Date',
+    formatOptions: { pattern: 'yyyy-MM-dd' }
+  }"
+/>
+
+<!-- 2) type.Date + formatOptions (yyyyMMdd) -->
+<DatePicker
+  value="{
+    path: 'oInputModel>/Assigndate',
+    type: 'sap.ui.model.type.Date',
+    formatOptions: { pattern: 'yyyyMMdd' }
+  }"
+/>
+
+<!-- 3) valueFormat + displayFormat -->
+<DatePicker
+  value="{oInputModel>/Assigndate}"
+  valueFormat="yyyyMMdd"
+  displayFormat="yyyy-MM-dd"
+/>
+
+<!-- 4) valueFormat만 -->
+<DatePicker
+  value="{oInputModel>/Assigndate}"
+  valueFormat="yyyyMMdd"
+/>
+
+<!-- 5) displayFormat만 -->
+<DatePicker
+  value="{oInputModel>/Assigndate}"
+  displayFormat="yyyy-MM-dd"
+/>
+```
+```yaml
+[1) type.Date + formatOptions]
+화면 : 2026-07-01
+JS   : Date 객체
+parse() : 필요 없음
+의미 : 모델 타입을 Date로 고정, pattern은 화면용
+
+[2) type.Date + formatOptions (yyyyMMdd)]
+화면 : 20260701
+JS   : Date 객체
+parse() : 필요 없음
+의미 : 패턴이 달라도 모델은 Date
+
+[3) valueFormat + displayFormat]
+화면 : 2026-07-01
+JS   : "20260701" (문자열)
+parse() : 필요
+의미 : valueFormat=모델용, displayFormat=화면용
+
+[4) valueFormat만]
+화면 : 20260701
+JS   : "20260701"
+parse() : 필요
+의미 : 화면/모델 포맷 동일, 문자열 기반
+
+[5) displayFormat만]
+화면 : 2026-07-01
+JS   : 문자열(형식 불명확)
+parse() : 상황 따라 필요
+의미 : 모델 포맷 제어 안 됨 (비추천)
+```
