Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -225,7 +225,24 @@
 
 </br>
 
-## < DatePicker 정리 >
+## < DatePicker / DateRangeSelection 정리 >
+</br>
+
+- **CREATE / UPDATE (서버로 전송)** : Date 객체 그대로 사용. 필요 시 `setMinutes(getTimezoneOffset)` 1회
+- **READ / FILTER (조회 조건)** : `DateFormat.getInstance({ UTC:true })` 사용. `parse` / `format` 가능
+```java
+oData.Assigndate.setMinutes(
+    oData.Assigndate.getMinutes() - oData.Assigndate.getTimezoneOffset()
+);
+```
+```java
+let oDateFormat = sap.ui.core.format.DateFormat.getInstance({
+    pattern: "yyyy-MM-dd",
+    UTC: true
+});
+let oStartDate = oDateFormat.parse(oInput.Assigndate);
+let oEndDate = oDateFormat.parse("20260701");
+```
 ```html
 <!-- 1) type.Date + formatOptions -->
 <DatePicker
@@ -263,6 +280,29 @@
   value="{oInputModel>/Assigndate}"
   displayFormat="yyyy-MM-dd"
 />
+
+<!-- ===================================================== -->
+<!-- 6) DateRangeSelection + type.Date + formatOptions -->
+<DateRangeSelection
+  dateValue="{
+    path: 'oInputModel>/StartDate',
+    type: 'sap.ui.model.type.Date',
+    formatOptions: { pattern: 'yyyy-MM-dd' }
+  }"
+  secondDateValue="{
+    path: 'oInputModel>/EndDate',
+    type: 'sap.ui.model.type.Date',
+    formatOptions: { pattern: 'yyyy-MM-dd' }
+  }"
+/>
+
+<!-- 7) DateRangeSelection + valueFormat / displayFormat -->
+<DateRangeSelection
+  dateValue="{oInputModel>/StartDate}"
+  secondDateValue="{oInputModel>/EndDate}"
+  valueFormat="yyyyMMdd"
+  displayFormat="yyyy-MM-dd"
+/>
 ```
 ```yaml
 [1) type.Date + formatOptions]
@@ -294,4 +334,22 @@ parse() : 필요
 JS   : 문자열(형식 불명확)
 parse() : 상황 따라 필요
 의미 : 모델 포맷 제어 안 됨 (비추천)
+
+--------------------------------------------------------
+
+[6) DateRangeSelection + type.Date + formatOptions]
+화면 : 2026-07-01 ~ 2026-07-31
+JS   : 
+  StartDate = Date 객체
+  EndDate   = Date 객체
+parse() : 필요 없음
+의미 : 날짜 범위를 Date 객체로 안전하게 처리 (⭐추천)
+
+[7) DateRangeSelection + valueFormat / displayFormat]
+화면 : 2026-07-01 ~ 2026-07-31
+JS   :
+  StartDate = "20260701"
+  EndDate   = "20260731"
+parse() : 필요
+의미 : 서버/ABAP yyyyMMdd 포맷에 맞춘 범위 검색
 ```
