Update 1-8. 프로그래밍 코드 최적화(02.10).md

--- a/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
+++ b/RAP/1-8. 프로그래밍 코드 최적화(02.10).md
@@ -353,3 +353,106 @@ JS   :
 parse() : 필요
 의미 : 서버/ABAP yyyyMMdd 포맷에 맞춘 범위 검색
 ```
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
+- header-item oData 서비스 연결 실습
+</br>
+
+**1) SAP GUI 코드**
+- `HEADERSET_GET_ENTITYSET`
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : HEADERSET_GET_ENTITYSET
+
+  method HEADERSET_GET_ENTITYSET.
+    SELECT * FROM zscarrcl2_b03
+      INTO TABLE et_entityset.
+  endmethod.
+```
+- `ITEMSET_GET_ENTITYSET`
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : ITEMSET_GET_ENTITYSET
+
+  method ITEMSET_GET_ENTITYSET.
+    DATA lv_carrid TYPE s_carr_id.
+    DATA lt_data TYPE TABLE OF zspflicl2_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      IF ls_key-name EQ 'Carrid'.
+        MOVE ls_key-value TO lv_carrid.
+      ENDIF.
+    ENDLOOP.
+
+    SELECT * FROM ZSPFLICL2_B03
+      INTO TABLE lt_data
+      WHERE carrid = lv_carrid.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING lt_data TO et_entityset.
+    ENDIF.
+  endmethod.
+```
+- `/IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITY`
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT : /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITY
+
+  method /IWBEP/IF_MGW_APPL_SRV_RUNTIME~GET_EXPANDED_ENTITY.
+    TYPES BEGIN OF ty_headeritem.
+      INCLUDE TYPE ZCL_ZGWHEADITEM_B03_MPC=>ts_header.
+      TYPES ItemSet TYPE TABLE OF ZCL_ZGWHEADITEM_B03_MPC=>ts_item WITH DEFAULT KEY.
+    TYPES END OF ty_headeritem.
+    DATA: lv_carrid TYPE s_carr_id,
+          ls_header_item TYPE ty_headeritem,
+          lv_nav TYPE string VALUE 'ITEMSET'.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      IF ls_key-name EQ 'Carrid'.
+        MOVE ls_key-value TO lv_carrid.
+      ENDIF.
+    ENDLOOP.
+
+    " Header 조회
+    SELECT SINGLE * FROM zscarrcl2_b03
+      INTO CORRESPONDING FIELDS OF ls_header_item
+      WHERE carrid = lv_carrid.
+    if sy-subrc = 0.
+      " Item 조회 (Navigation Property 이름에 맞춰 데이터 채움)
+      SELECT * FROM zspflicl2_b03
+        INTO CORRESPONDING FIELDS OF TABLE ls_header_item-itemset
+        WHERE carrid = lv_carrid.
+    ENDIF.
+
+    " 결과 출력(ER_ENTITY)
+    copy_data_to_ref(
+      EXPORTING is_data = ls_header_item
+      CHANGING cr_data = er_entity ).
+
+    " Navigation Property 데이터 처리 완료되었다고 알려주는 파라미터
+    INSERT lv_nav INTO TABLE et_expanded_tech_clauses.
+  endmethod.
+```
+- 
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT
+
+```
+- 
+```abap
+" ZCL_ZGWHEADITEM_B03_DPC_EXT
+
+```
+</br>
+
+**1) SAP GUI 코드**
+
+</br>
+
+**1) SAP GUI 코드**
